# CyberSecurity_Analyser

./: .gitignore  container.py  main.py  pyproject.toml
data/: brands.csv  cleaned_file.csv
routes/: analysis_routes.py  brand_routes.py
services/: analysis_service.py  brand_service.py  helpers.py  models.py  openai_service.py
services/prompts/: core_analysis.jinja  framework_analysis.jinja
