[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sarique-Deepsolv <mohd.sarique@deepsolv.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
langchain-openai = "^0.3.24"
pymupdf = "^1.26.1"
jinja2 = "^3.1.6"
dependency-injector = "^4.48.0"
dotenv = "^0.9.9"
pandas = "^2.3.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
